--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         </ul>
        </div>
            <!-- content -->
-           <div class="row">
+           <div class="row container-xxl">
            <div class="mt-5 col-6">
-            <p class='fs-1 fw-bold' style="color: #111C38;">Budget-Friendly Painting Service Company in Singapore</p>
+            <h1 class='fw-bold' style="color: #111C38;">Budget-Friendly Painting Service Company in Singapore</h1>
             <p class="fs-5 mt-3">Looking for a painting service for your HDB (or) Condominium (or) Landed Residential Property in Singapore?</p>
           <P class="fs-5 mt-3">Contact us via Call or WhatsApp To Book Your Site Visit For An Exact Quotation.</P>
            <div class="mt-5 pb-5">
@@ -98,9 +98,9 @@
 <!-- Our Service -->
 <div class="container-xxl mt-5 mb-3 ">
     <div class="text-center pt-5 pb-3 position-relative">
-    <h1 class="fw-bold maintitle">Our Painting Services</h1>
-    <span class="title">Our Painting Services</span>
-    <span class="new"></span>
+    <h2 class="fw-bold maintitle">Our Painting Services</h2>
+    <span class="h1 title title-Our-service ">Our Painting Services</span>
+    <span class="  new title-service-border "></span>
 </div>
     <div class="mt-5 d-flex justify-content-center  row">
       <div class="card shadow rounded-4 pt-4 background mx-4" style="width : 29rem;">
@@ -180,7 +180,7 @@
             <div class="pt-4 background">
             <div class="container-xxl">
               <div class="text-center ">
-                <h1 class="fw-bold mb-4 maintitle">Factors that determine the painting cost estimation for your residential properties</h1>
+                <h2 class="mb-4 maintitle">Factors that determine the painting cost estimation for your residential properties</h2>
                 <h4>Below are the factors that determine the painting cost estimation for your residential properties,
                 </h4>
             </div>
@@ -223,7 +223,7 @@
             <!-- maintenance tips -->
             <div class="container-xxl container-xl">
               <div class="position-relative text-center my-4">
-                <h1 class="fw-bold maintitle">Maintenance Tips For Painted Residential Homes</h1>
+                <h2 class=" maintitle">Maintenance Tips For Painted Residential Homes</h2>
                 <!-- <span class="fifthtitle">Maintenance Tips For Painted Residential Homes</span> -->
             </div>
             <div class="pb-5">
@@ -261,7 +261,7 @@
                <!-- Type of Paints -->
             <div class="container-xxl container-xl  my-5">
                 <div class="text-center pb-5 position-relative">
-                    <h1 class="fw-bold maintitle">Types of Paints</h1>
+                    <h2 class="maintitle">Types of Paints</h2>
                     <h4>Find out the types of paints that are used to paint the residential properties,</h4>
                 </div>
                 <div class="row justify-content-around">
@@ -303,7 +303,7 @@
              <!-- top brands in singapore -->
            <div class=" container-xxl container-xl my-5">
             <div class="text-center pb-5 position-relative">
-              <h1 class="fw-bold mb-4 maintitle">Top Paint Brands in Singapore</h1>
+              <h2 class="mb-4 maintitle">Top Paint Brands in Singapore</h2>
                <!-- <span class="forthtitle">Top Paint Brands in Singapore</span> -->
              <h4>We are basically brand agnostic. We do a painting service based on your chosen brand; we don't promote any particular brands.
               </h4>
@@ -326,9 +326,9 @@
            <!-- FAQS -->
            <div class="container-xxl container-xl my-5">
             <div class="text-center py-4 position-relative">
-              <h1 class="fw-bold maintitle">FAQS</h1>
-              <span class="sixtitle ">FAQS</span>
-              <span class="faqborder"></span>
+              <h2 class="maintitle">FAQS</h2>
+              <span class="h1 title title-faqs">FAQS</span>
+              <span class=" new faqborder"></span>
           </div>
           <div class="accordion" id="accordionExample">
             <div class="accordion-item border">
@@ -372,7 +372,7 @@
              <!-- Gallery -->
              <div class="container-xxl my-5 ">
               <div class="py-5  text-center position-relative">
-                <h1 class="fw-bold maintitle">Stunning Inspirations Just For You!</h1>
+                <h2 class=" maintitle">Stunning Inspirations Just For You!</h2>
                 <div class="slick-controls position-absolute end-0 ">
                   
                  <img src="img/Group 10.png" class="previousbtn  slick-prev arrow1"  >
@@ -570,9 +570,9 @@
               <div class="container-xxl container-xl my-5">
                 <div class="pt-3 pb-3">
                 <div class="text-center position-relative">
-                  <h1 class="fw-bold maintitle">Customer Review</h1>
-                  <span class="customtitle">Customer Review</span>
-                  <span class="newborder"></span>
+                  <h2 class="fw-bold maintitle">Customer Review</h2>
+                  <span class="h1 title customtitle">Customer Review</span>
+                  <span class="custom-title-border  new"></span>
               </div>
             </div>
               <!-- <div class="slick-controls position-relative">
