--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <div>
    <div class="pb-5 background ">
-    <div class="container-xxl container-xl">
+    <div class="container-div">
          <!-- Header -->
        <div class="d-flex justify-content-between py-4 align-items-center">
         <img src="img/Logo 1.png" style="width: 49px;height: 47px;">
@@ -67,10 +67,10 @@
         </ul>
        </div>
            <!-- content -->
-           <div class="row container-xxl">
-           <div class="mt-5 col-6">
+           <div class="row">
+           <div class="mt-5 col-12 col-md-6">
             <h1 class='fw-bold' style="color: #111C38;">Budget-Friendly Painting Service Company in Singapore</h1>
-            <p class="fs-5 mt-3">Looking for a painting service for your HDB (or) Condominium (or) Landed Residential Property in Singapore?</p>
+            <p class=" mt-3">Looking for a painting service for your HDB (or) Condominium (or) Landed Residential Property in Singapore?</p>
           <P class="fs-5 mt-3">Contact us via Call or WhatsApp To Book Your Site Visit For An Exact Quotation.</P>
            <div class="mt-5 pb-5">
             <a href="tel:+6569697999" class=" btn px-5 py-3 rounded-pill border-0 red-button"><span class="px-2">
@@ -85,7 +85,7 @@
           </svg></span>+ 65 6969 7999</a>
            </div>
         </div>
-        <div class="col-6 mt-5 slick-carousel-1">
+        <div class="col-12 col-md-6 mt-5 slick-carousel-1">
           <div class="slide"><img src="img/banner 1 - painting.jpg" style="width: 100%;height: 380px;" class="rounded-3"></div>
           <div class="slide"><img src="img/banner 2 - painting.jpg" style="width: 100%;height: 380px;" class="rounded-3"></div>
           <div class="slide"><img src="img/banner 3 - painting.jpg" style="width: 100%;height: 380px;" class="rounded-3"></div>
@@ -96,7 +96,7 @@
     </div>
 </div>
 <!-- Our Service -->
-<div class="container-xxl mt-5 mb-3 ">
+<div class="container-div mt-5 mb-3 ">
     <div class="text-center pt-5 pb-3 position-relative">
     <h2 class="fw-bold maintitle">Our Painting Services</h2>
     <span class="h1 title title-Our-service ">Our Painting Services</span>
@@ -158,7 +158,7 @@
     </div>
 </div>
             <!-- Pricing -->
-            <div class="container-xxl">
+            <div class="container-div">
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item">
                 <h3 class="accordion-header text-center w-25 mx-auto" id="flush-headingOne" >
@@ -178,7 +178,7 @@
            </div>
             <!-- cost of paints service -->
             <div class="pt-4 background">
-            <div class="container-xxl">
+            <div class="container-div">
               <div class="text-center ">
                 <h2 class="mb-4 maintitle">Factors that determine the painting cost estimation for your residential properties</h2>
                 <h4>Below are the factors that determine the painting cost estimation for your residential properties,
@@ -221,7 +221,7 @@
             </div>
           </div>
             <!-- maintenance tips -->
-            <div class="container-xxl container-xl">
+            <div class="container-div">
               <div class="position-relative text-center my-4">
                 <h2 class=" maintitle">Maintenance Tips For Painted Residential Homes</h2>
                 <!-- <span class="fifthtitle">Maintenance Tips For Painted Residential Homes</span> -->
@@ -250,7 +250,7 @@
             </div>
             <!-- did you know -->
             <div class="pb-1 background">
-              <div class="container-xxl container-xl">
+              <div class="container-div container-div">
                 <div class="text-center py-3">
                   <img src="/img/did-you-know.png" style="width: 150px;">
                   <h3 class="mt-4">When you paint your residential properties, use 60% light, 30% medium, and 10% dark colours. This colouring equation will give your home an even-toned look and feel.
@@ -259,7 +259,7 @@
               </div>
               </div>
                <!-- Type of Paints -->
-            <div class="container-xxl container-xl  my-5">
+            <div class="container-div  my-5">
                 <div class="text-center pb-5 position-relative">
                     <h2 class="maintitle">Types of Paints</h2>
                     <h4>Find out the types of paints that are used to paint the residential properties,</h4>
@@ -301,7 +301,7 @@
                     </div>
             </div>
              <!-- top brands in singapore -->
-           <div class=" container-xxl container-xl my-5">
+           <div class=" container-div  my-5">
             <div class="text-center pb-5 position-relative">
               <h2 class="mb-4 maintitle">Top Paint Brands in Singapore</h2>
                <!-- <span class="forthtitle">Top Paint Brands in Singapore</span> -->
@@ -324,7 +324,7 @@
         </div>
           </div>
            <!-- FAQS -->
-           <div class="container-xxl container-xl my-5">
+           <div class="container-div my-5">
             <div class="text-center py-4 position-relative">
               <h2 class="maintitle">FAQS</h2>
               <span class="h1 title title-faqs">FAQS</span>
@@ -370,7 +370,7 @@
           </div>
           </div>
              <!-- Gallery -->
-             <div class="container-xxl my-5 ">
+             <div class="container-div my-5 ">
               <div class="py-5  text-center position-relative">
                 <h2 class=" maintitle">Stunning Inspirations Just For You!</h2>
                 <div class="slick-controls position-absolute end-0 ">
@@ -444,7 +444,7 @@
             </div>
             <!-- Why choose us -->
             <div class="mt-5 background position-relative">
-                <div class="container-xxl py-5 justify-content-center">
+                <div class="container-div py-5 justify-content-center">
                             <div class="text-center pb-3">
                                 <h2 class="maintitle">Why Proptality?</h2>
                             </div>
@@ -567,7 +567,7 @@
                 </div>
               </div>
                 <!-- review -->
-              <div class="container-xxl container-xl my-5">
+              <div class="container-div  my-5">
                 <div class="pt-3 pb-3">
                 <div class="text-center position-relative">
                   <h2 class="fw-bold maintitle">Customer Review</h2>
@@ -629,7 +629,7 @@
             </div>
           </div>
               <!-- request call back -->
-              <div class="container-xxl container-xl py-5">
+              <div class="container-div  py-5">
               <div class="row ">
                 <div class="col-12 requestcall">
                 <h2 class="request text-center">Request a call back</h2>
@@ -645,7 +645,7 @@
             </div>
              <!-- Footer -->
                   <footer>
-                    <div class="container-xxl container-xl">
+                    <div class="container-div container-div">
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-12">
                                 <div class="footer-left">
