--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
           <P class="fs-5 mt-3">Contact us via Call or WhatsApp To Book Your Site Visit For An Exact Quotation.</P>
            <div class="mt-5 pb-5">
             <a href="tel:+6569697999" class=" btn px-5 py-3 rounded-pill border-0 red-button"><span class="px-2">
-              <svg width="32" height="32" viewBox="0 0 27 27"
+              <svg width="25" height="25" viewBox="0 0 27 27"
               xmlns="http://www.w3.org/2000/svg">
               <path
                   d="M20.6095 14.3907C20.0881 13.8693 19.2455 13.8693 18.7241 14.3907L16.5988 16.516C15.6135 16.2227 13.7748 15.556 12.6095 14.3907C11.4441 13.2253 10.7775 11.3867 10.4841 10.4013L12.6095 8.276C13.1308 7.75467 13.1308 6.912 12.6095 6.39067L7.27612 1.05734C6.75479 0.536003 5.91212 0.536003 5.39079 1.05734L1.77479 4.67334C1.26812 5.18 0.982786 5.876 0.993453 6.58667C1.02412 8.48534 1.52679 15.08 6.72412 20.2773C11.9215 25.4747 18.5161 25.976 20.4161 26.008C20.4228 26.008 20.4468 26.008 20.4535 26.008C21.1575 26.008 21.8228 25.7307 22.3268 25.2267L25.9428 21.6107C26.4641 21.0893 26.4641 20.2467 25.9428 19.7253L20.6095 14.3907ZM20.4401 23.34C18.7761 23.312 13.0828 22.8653 8.60945 18.3907C4.12145 13.9027 3.68679 8.18934 3.66012 6.55867L6.33345 3.88534L9.78145 7.33334L8.05745 9.05734C7.73879 9.37467 7.60279 9.83334 7.69479 10.2733C7.72679 10.4267 8.50945 14.0627 10.7228 16.276C12.9361 18.4893 16.5721 19.272 16.7255 19.304C17.1695 19.3987 17.6241 19.2613 17.9415 18.9427L19.6668 17.2187L23.1148 20.6667L20.4401 23.34Z"
                   fill="white" />
           </svg></span>+ 65 6969 7999</a>
-            <a href="https://api.whatsapp.com/send?phone=6569697999&text=Hi" target="_blank" class="btn px-5 py-3 rounded-pill mx-2 border-0 blue-button"><span class="px-2"> <svg width="32" height="32" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="https://api.whatsapp.com/send?phone=6569697999&text=Hi" target="_blank" class="btn px-5 py-3 rounded-pill mx-2 border-0 blue-button"><span class="px-2"> <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M20.5373 3.51067C18.2773 1.248 15.272 0.00133333 12.0707 0C5.47333 0 0.102667 5.36933 0.1 11.9693C0.1 14.0787 0.650666 16.1373 1.69733 17.9533L0 24.1547L6.34533 22.4893C8.09467 23.4427 10.0627 23.9453 12.0653 23.9467H12.0707C18.6667 23.9467 24.0373 18.5773 24.04 11.9773C24.04 8.78 22.7973 5.77333 20.5373 3.51067ZM12.0707 21.9267H12.0667C10.2813 21.9253 8.53067 21.4467 7.00267 20.5387L6.64 20.3227L2.87467 21.3107L3.87867 17.64L3.64267 17.264C2.64667 15.68 2.12133 13.8493 2.12133 11.9693C2.124 6.484 6.58667 2.02133 12.0747 2.02133C14.732 2.02267 17.2293 3.05867 19.108 4.93867C20.9853 6.82 22.02 9.31867 22.0187 11.9773C22.016 17.4627 17.5533 21.9267 12.0707 21.9267ZM17.528 14.4747C17.228 14.324 15.7587 13.6013 15.484 13.5013C15.2107 13.4013 15.012 13.352 14.812 13.6507C14.612 13.9493 14.0387 14.6227 13.864 14.8227C13.6893 15.0227 13.5147 15.0467 13.216 14.8973C12.9173 14.748 11.9533 14.432 10.8107 13.4133C9.92133 12.62 9.32133 11.6413 9.14667 11.3413C8.972 11.0413 9.128 10.88 9.27867 10.7307C9.41333 10.5973 9.57733 10.3813 9.72667 10.2067C9.876 10.032 9.92533 9.908 10.0253 9.708C10.1253 9.508 10.076 9.33333 10 9.184C9.92533 9.03333 9.32667 7.56133 9.07733 6.96267C8.836 6.38267 8.58933 6.46 8.40533 6.452C8.232 6.444 8.032 6.44133 7.83333 6.44133C7.63333 6.44133 7.30933 6.516 7.03467 6.81467C6.76 7.11467 5.988 7.83733 5.988 9.30933C5.988 10.7813 7.06 12.204 7.20933 12.404C7.35867 12.604 9.31867 15.624 12.3187 16.92C13.0333 17.228 13.5907 17.412 14.024 17.5507C14.74 17.7787 15.392 17.7453 15.908 17.6693C16.4827 17.584 17.6773 16.9467 17.9267 16.248C18.176 15.5493 18.176 14.9507 18.1013 14.8253C18.0267 14.7 17.8253 14.624 17.528 14.4747Z" fill="#0E3554"></path>
           </svg></span>+ 65 6969 7999</a>
            </div>
@@ -249,12 +249,13 @@
             </div>
             </div>
             <!-- did you know -->
-            <div class="pb-1 background">
+            
               <div class="container-div container-div">
+                <div class="pb-1 background rounded-4">
                 <div class="text-center py-3">
                   <img src="/img/did-you-know.png" style="width: 150px;">
-                  <h3 class="mt-4">When you paint your residential properties, use 60% light, 30% medium, and 10% dark colours. This colouring equation will give your home an even-toned look and feel.
-                  </h3>
+                  <h5 class="mt-4 px-5">When you paint your residential properties, use 60% light, 30% medium, and 10% dark colours. This colouring equation will give your home an even-toned look and feel.
+                  </h5>
               </div>
               </div>
               </div>
@@ -262,7 +263,7 @@
             <div class="container-div  my-5">
                 <div class="text-center pb-5 position-relative">
                     <h2 class="maintitle">Types of Paints</h2>
-                    <h4>Find out the types of paints that are used to paint the residential properties,</h4>
+                    <h5>Find out the types of paints that are used to paint the residential properties,</h5>
                 </div>
                 <div class="row justify-content-around">
                     <div class="card col-5 background">
@@ -305,8 +306,8 @@
             <div class="text-center pb-5 position-relative">
               <h2 class="mb-4 maintitle">Top Paint Brands in Singapore</h2>
                <!-- <span class="forthtitle">Top Paint Brands in Singapore</span> -->
-             <h4>We are basically brand agnostic. We do a painting service based on your chosen brand; we don't promote any particular brands.
-              </h4>
+             <h5>We are basically brand agnostic. We do a painting service based on your chosen brand; we don't promote any particular brands.
+              </h5>
           </div>
           <div class="d-flex justify-content-evenly">
             <div>
