--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
             <li class="px-4 fs-5 py-3"><a href="#"class="head font-Poppins">Our Works</a></li>
             <li class="px-4 fs-5 py-3"><a href="#" class="head font-Poppins">Ratings & Reviews</a></li>
             <li class="px-4 fs-5 py-3"><a href="#" class="head font-Poppins">Blog</a></li>
-            <li><a href="#" type="button" class="btn px-4 py-3 rounded-pill border-0 blue-button fs-5 font-Poppins ms-5">Contact Us</a></li>
+            <li><a href="#" type="button" class="btn px-4 py-3 rounded-pill border-0 blue-button fs-5 font-Poppins ms-4">Contact Us</a></li>
         </ul>
        </div>
            <!-- content -->
            <div class="row">
            <div class="mt-5 col-12 col-md-6">
             <h1 class='fw-bold' style="color: #111C38;">Budget-Friendly Painting Service Company in Singapore</h1>
-            <p class=" mt-3">Looking for a painting service for your HDB (or) Condominium (or) Landed Residential Property in Singapore?</p>
-          <P class=" mt-3">Contact us via Call or WhatsApp To Book Your Site Visit For An Exact Quotation.</P>
+            <p class="mt-4">Looking for a painting service for your HDB (or) Condominium (or) Landed Residential Property in Singapore?</p>
+          <P class="mt-4">Contact us via Call or WhatsApp To Book Your Site Visit For An Exact Quotation.</P>
            <div class="mt-5 pb-5 ">
          
                   <a href="tel:+6569697999" class="m-2 btn px-5 py-3 rounded-pill border-0 red-button"><span class="px-2">
@@ -189,7 +189,7 @@
                 </h4>
             </div>
             <div class="d-flex justify-content-between py-5">
-              <div class="card shadow rounded-4 py-3" style="width: 18rem;">
+              <div class="card shadow rounded-4 py-3 paintcard">
                 <div class="card-body">
                   <h5 class="card-title fw-bold">Height of the building
                   </h5>
@@ -197,7 +197,7 @@
                 </p>
                 </div>
               </div>
-              <div class="card shadow rounded-4 py-3" style="width: 18rem;">
+              <div class="card shadow rounded-4 py-3 paintcard">
                 <div class="card-body">
                   <h5 class="card-title fw-bold">Size of Painting Area
                   </h5>
@@ -206,14 +206,14 @@
                 </div>
               </div>
              
-              <div class="card shadow rounded-4 py-3" style="width: 18rem;">
+              <div class="card shadow rounded-4 py-3 paintcard">
                 <div class="card-body">
                   <h5 class="card-title fw-bold">Complexity</h5>
                   <p class="card-text">When you opt to add more colours, more effort is required to set up & complete the painting work.
                 </p>
                 </div>
               </div>
-              <div class="card shadow rounded-4 py-3" style="width: 18rem;">
+              <div class="card shadow rounded-4 py-3 paintcard">
                 <div class="card-body">
                   <h5 class="card-title fw-bold">Type of Paint used</h5>
                   <p class="card-text">Each paint type has a particular purpose and will give a different look (after finishing). Example Nippons' Matex paint is cheap/litre compared to Nippons' "All in one" paint/litre.
@@ -274,7 +274,7 @@
                         <div class="card-body">
                     <h4 class="fw-bold">Antifungal / Anti Mould Paints
                     </h4>
-                    <p style="font-size: 18px;">Antifungal paints protect your home from fungus formation and mold formation. Usually, preferred application spots are areas that attract moisture, for example, bathrooms.
+                    <p>Antifungal paints protect your home from fungus formation and mold formation. Usually, preferred application spots are areas that attract moisture, for example, bathrooms.
                     </p>
                         </div>
                       </div>
@@ -282,14 +282,14 @@
                         <div class="card-body">
                     <h4 class="fw-bold">Health Specific Paints
                     </h4>
-                    <p style="font-size: 18px;">Virus guard paints provide antibacterial properties. Mozzieguard (Nippon Paints) protects homes from dengue-causing mosquitoes. Odourless paints, as the name suggests, they are odourless. 
+                    <p>Virus guard paints provide antibacterial properties. Mozzieguard (Nippon Paints) protects homes from dengue-causing mosquitoes. Odourless paints, as the name suggests, they are odourless. 
                     </p>
                         </div>
                       </div>
                       <div class="card mt-4 col-5 background">
                         <div class="card-body">
                     <h4 class="fw-bold">Oil-based and Water-based House Paint</h4>
-                    <p style="font-size: 18px;">Oil-based paints are made with oil, and water-based paint with water. Oil-based paints are more durable, shiny, and take longer to dry, and water-based paints are thinner, matte, and take less time to dry. Oil-based paints are used for doors, door frames, and furniture, whereas water-based paints are for walls, ceilings, etc.
+                    <p>Oil-based paints are made with oil, and water-based paint with water. Oil-based paints are more durable, shiny, and take longer to dry, and water-based paints are thinner, matte, and take less time to dry. Oil-based paints are used for doors, door frames, and furniture, whereas water-based paints are for walls, ceilings, etc.
 
                     </p>
                         </div>
@@ -298,7 +298,7 @@
                         <div class="card-body">
                     <h4 class="fw-bold">Interior and Exterior House Paint
                     </h4>
-                    <p style="font-size: 18px;">Most paints are labelled interior or exterior. Interior paints are usually water-based, and exterior paints are typically oil-based. 
+                    <p>Most paints are labelled interior or exterior. Interior paints are usually water-based, and exterior paints are typically oil-based. 
                     </p>
                         </div>
                       </div>
@@ -386,72 +386,74 @@
             </div>
             <div class="row slick-carousel-2 pb-5">
               <div class="col-12">
-                <img src="img/gallery 1.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 1.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 2.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 2.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 3.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 3.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 4.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 4.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 5.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 5.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 6.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 6.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 7.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 7.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 8.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 8.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 9.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 9.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 10.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 10.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 11.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 11.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 12.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 12.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 13.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 13.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 14.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 14.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 15.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 15.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 16.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 16.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 17.jpg" class="rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 17.jpg" class="rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 18.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 18.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 19.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 19.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
               <div class="col-12">
-                <img src="img/gallery 20.jpg" class=" rounded-4 mx-auto" style="height: 250px;width: 416px;">
+                <img src="img/gallery 20.jpg" class=" rounded-4 mx-auto galleryimg" >
               </div>
             </div>
             </div>
             <!-- Why choose us -->
             <div class="mt-5 background position-relative">
                 <div class="container-div py-5 justify-content-center">
-                            <div class="text-center pb-3">
+                            <div class="text-center proptext pb-3">
                                 <h2 class="maintitle">Why Proptality?</h2>
+                  <span class="h1 proptitle">Why Proptality?</span>
+                  <span class="proptality-border  new"></span>
                             </div>
                                 <div class="row">
                                     <div class="d-flex col-12 my-4  mx-auto">
@@ -638,7 +640,7 @@
               <div class="row ">
                 <div class="col-12 requestcall">
                 <h2 class="request text-center">Request a call back</h2>
-                <span class="new-border"></span>
+                <span class="new new-border"></span>
                 <ul class="mt-5 d-flex justify-content-center list-unstyled">
                   <li class="mx-3"><input class="forminput" placeholder="Name"></li>
                   <li class="mx-3"><input class="forminput" placeholder="Email Address"></li>
