--- a/StrongWaterHeater.html
+++ b/StrongWaterHeater.html
@@ -98,11 +98,13 @@
     </div>
      <!-- type of heater -->
      <div class="container-div">
-        <div class="text-center my-5">
+        <div class="text-center my-5 position-relative">
             <p class="paragraph">I hope this guide will give you more information about water heater options available in the market.
             </p>
-            <h2 class="maintitle">Types Of Water Heater</h2>
-            <h5>There are two types of water heaters
+            <h1 class="maintitle mt-5">Types Of Water Heater</h1>
+            <span class="heatertitle">Types Of Water Heater</span>
+        <span class="custom-title-border  new"></span>
+            <h5 class="mt-4">There are two types of water heaters
             </h5>
             <div class="d-flex justify-content-evenly mt-5 row">
                     <div class="col-sm-6">
@@ -187,9 +189,11 @@
 
  <!-- type of installation method -->
  <div class="container-div">
-    <div class="text-center my-5">
-        <h2 class="maintitle">Installation Methods</h2>
-        <h5>Storage water heaters can be installed in two ways.
+    <div class="text-center my-5 position-relative">
+        <h1 class="maintitle">Installation Methods</h1>
+        <span class="methodtitle">Installation Methods</span>
+        <span class="custom-title-border  new"></span>
+        <h5 class="mt-4">Storage water heaters can be installed in two ways.
         </h5>
     </div>
         <div class="d-flex justify-content-evenly mt-5 row">
@@ -344,8 +348,10 @@
 </div>
 <!-- Brands -->
 <div class="container-div py-5">
-  <div class="pb-4 text-center">
-    <h2 class="maintitle">Storage Water Heater Brands We Install in Singapore</h2>
+  <div class="pb-4 text-center position-relative">
+    <h1 class="maintitle">Storage Water Heater Brands We Install in Singapore</h1>
+    <span class="page3title">Storage Water Heater Brands We Install in Singapore</span>
+    <span class="faqborder2"></span>
 </div>
 <div class="d-flex justify-content-between">
   <img src="/img/instantWaterHeater/ariston logo.jpg" class="shadow rounded-4 heaterbrand">
@@ -414,8 +420,10 @@
 <!-- Factors to consider before buying a water heater? -->
 <div class="background my-5 pb-5">
   <div class="container-div">
-    <div class="text-center py-5 position-relative">
-        <h2 class="maintitle">Factors to consider before buying a water heater?</h2>
+    <div class="text-center py-5 position-relative titlecolor">
+        <h1 class="maintitle">Factors to consider before buying a water heater?</h1>
+        <span class="factortitle">Factors to consider before buying a water heater?</span>
+        <span class="custom-title-border  new"></span>
     </div>
     <div class="row justify-content-around">
         <div class="card col-5">
@@ -488,7 +496,7 @@
  <!-- FAQS -->
  <div class="container-div">
   <div class="text-center pb-3 position-relative">
-    <h2 class="fw-bold maintitle">FAQS</h2>
+    <h1 class="fw-bold maintitle">FAQS</h1>
     <span class="sixtitle3">FAQS</span>
     <span class="faqborder2"></span>
 </div>
@@ -558,8 +566,10 @@
  <!-- maintenance -->
  <div class="mt-5 pb-5 font-family">
   <div class="container-div">
-      <div class="text-center pb-3">
-          <h2 class="maintitle">Maintenance Checklist for Water Heaters</h2>
+      <div class="text-center pb-3 position-relative">
+          <h1 class="maintitle">Maintenance Checklist for Water Heaters</h1>
+    <span class="page3title">Maintenance Checklist for Water Heaters</span>
+    <span class="faqborder2"></span>
       </div>
       <div class="d-flex row justify-content-evenly">
           <div class="rounded-4 py-3 col-6">
@@ -625,7 +635,7 @@
   <!-- Gallery -->
   <div class="container-div mb-5">
     <div class="py-5  text-center position-relative">
-      <h2 class="fw-bold maintitle">Our Works</h2>
+      <h1 class="fw-bold maintitle">Our Works</h1>
                 <span class="h1 gallerytitle">Our Works</span>
                     <span class="proptality-border  new"></span>
       <div class="slick-controls position-absolute end-0 ">
@@ -674,7 +684,7 @@
     <!-- Why choose us -->
     <div class="container-div py-5 justify-content-center">
       <div class="text-center pb-3 position-relative">
-          <h2 class="maintitle">Why Proptality?</h2>
+          <h1 class="maintitle">Why Proptality?</h1>
           <span class="h1 proptitle2">Why Proptality?</span>
           <span class="proptality-border  new"></span>
       </div>
@@ -799,8 +809,8 @@
     <div class="container-div container-xl my-5">
       <div class="pt-3 pb-3">
       <div class="text-center position-relative">
-        <h2 class="fw-bold maintitle">Customer Review</h2>
-        <span class="customtitle">Customer Review</span>
+        <h1 class="fw-bold maintitle">Customer Review</h1>
+        <span class="customtitle2">Customer Review</span>
         <span class="custom-title-border  new"></span>
     </div>
   </div>
@@ -1063,6 +1073,8 @@ $('.slick-carousel-3').slick({
 // @type {string} jQuery Selector
 dots: true,
 infinite: true,
+autoplay:true,
+autoplaySpeed: 1500,
 speed: 300,
 slidesToShow: 1,
 slidesToScroll: 1,
