--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <!-- Our Service -->
 <div class="container-div mt-5 mb-3 ">
     <div class="text-center pt-5 pb-3 position-relative">
-    <h2 class="fw-bold maintitle">Our Painting Services</h2>
+    <h1 class="fw-bold maintitle">Our Painting Services</h1>
     <span class="h1 title title-Our-service ">Our Painting Services</span>
     <span class="  new title-service-border "></span>
 </div>
@@ -226,8 +226,10 @@
           </div>
             <!-- maintenance tips -->
             <div class="container-div">
-              <div class="position-relative text-center my-4">
-                <h2 class=" maintitle">Maintenance Tips For Painted Residential Homes</h2>
+              <div class="position-relative text-center my-5">
+                <h1 class=" maintitle">Maintenance Tips For Painted Residential Homes</h1>
+                <span class="maintainheader">Maintenance Tips For Painted Residential Homes</span>
+                <span class="new title-service-border "></span>
                 <!-- <span class="fifthtitle">Maintenance Tips For Painted Residential Homes</span> -->
             </div>
             <div class="pb-5">
@@ -266,8 +268,10 @@
                <!-- Type of Paints -->
             <div class="container-div  my-5">
                 <div class="text-center pb-5 position-relative">
-                    <h2 class="maintitle">Types of Paints</h2>
-                    <h5>Find out the types of paints that are used to paint the residential properties,</h5>
+                    <h1 class="maintitle">Types of Paints</h1>
+                    <span class="maintainheader">Types of Paints</span>
+                    <span class="new title-service-border "></span>
+                    <h5 class="mt-3">Find out the types of paints that are used to paint the residential properties,</h5>
                 </div>
                 <div class="row justify-content-around">
                     <div class="card col-5 background">
@@ -307,10 +311,12 @@
             </div>
              <!-- top brands in singapore -->
            <div class=" container-div  my-5">
-            <div class="text-center pb-5 position-relative">
-              <h2 class="mb-4 maintitle">Top Paint Brands in Singapore</h2>
+            <div class="text-center mb-5 position-relative">
+              <h1 class="maintitle">Top Paint Brands in Singapore</h1>
+              <span class="maintainheader">Top Paint Brands in Singapore</span>
+              <span class="new brand-border "></span>
                <!-- <span class="forthtitle">Top Paint Brands in Singapore</span> -->
-             <h5>We are basically brand agnostic. We do a painting service based on your chosen brand; we don't promote any particular brands.
+             <h5 class="mt-4">We are basically brand agnostic. We do a painting service based on your chosen brand; we don't promote any particular brands.
               </h5>
           </div>
           <div class="d-flex justify-content-evenly">
@@ -331,7 +337,7 @@
            <!-- FAQS -->
            <div class="container-div my-5">
             <div class="text-center py-4 position-relative">
-              <h2 class="maintitle">FAQS</h2>
+              <h1 class="maintitle">FAQS</h1>
               <span class="h1 title title-faqs">FAQS</span>
               <span class=" new faqborder"></span>
           </div>
@@ -377,7 +383,9 @@
              <!-- Gallery -->
              <div class="container-div my-5 ">
               <div class="py-5  text-center position-relative">
-                <h2 class=" maintitle">Stunning Inspirations Just For You!</h2>
+                <h1 class=" maintitle">Stunning Inspirations Just For You!</h1>
+                <span class="galleryheader">Stunning Inspirations Just For You!</span>
+              <span class="new brand-border"></span>
                 <div class="slick-controls position-absolute end-0 ">
                   
                  <img src="img/Group 10.png" class="previousbtn  slick-prev arrow1"  >
@@ -451,7 +459,7 @@
             <div class="mt-5 background position-relative">
                 <div class="container-div py-5 justify-content-center">
                             <div class="text-center proptext pb-3">
-                                <h2 class="maintitle">Why Proptality?</h2>
+                                <h1 class="maintitle">Why Proptality?</h1>
                   <span class="h1 proptitle">Why Proptality?</span>
                   <span class="proptality-border  new"></span>
                             </div>
@@ -577,7 +585,7 @@
               <div class="container-div  my-5">
                 <div class="pt-3 pb-3">
                 <div class="text-center position-relative">
-                  <h2 class="fw-bold maintitle">Customer Review</h2>
+                  <h1 class="fw-bold maintitle">Customer Review</h1>
                   <span class="h1 title customtitle">Customer Review</span>
                   <span class="custom-title-border  new"></span>
               </div>
@@ -868,6 +876,8 @@ $('.slick-carousel-2').slick({
 		// @type {string} jQuery Selector
     dots: true,
   infinite: true,
+  autoplay:true,
+  autoplaySpeed: 1500,
   speed: 300,
   slidesToShow: 1,
   slidesToScroll: 1,
