--- a/InstantWaterHeater.html
+++ b/InstantWaterHeater.html
@@ -380,8 +380,10 @@
                             <!-- Factors to consider before buying a water heater? -->
                             <div class="mt-4 background pb-5 font-family">
                                 <div class="container-div">
-                                    <div class="text-center py-5">
-                                        <h2 class="maintitle">Factors to consider before buying a water heater?</h2>
+                                    <div class="text-center py-5 position-relative titlecolor">
+                                        <h1 class="maintitle">Factors to consider before buying a water heater?</h1>
+                                        <span class="factortitle">Factors to consider before buying a water heater?</span>
+                                        <span class="custom-title-border  new"></span>
                                     </div>
                                     <div class="d-flex row justify-content-evenly">
                                         <div class="card shadow rounded-4 py-3 col-3">
@@ -436,7 +438,7 @@
                      <!-- FAQS -->
               <div class="container-div">
                 <div class="text-center py-4 position-relative">
-                  <h2 class="fw-bold maintitle mt-4">FAQS</h2>
+                  <h1 class="fw-bold maintitle mt-4">FAQS</h1>
                   <span class="sixtitle2">FAQS</span>
                   <span class="faqborder2"></span>
               </div>
@@ -533,7 +535,7 @@
                    <!-- Gallery -->
              <div class="container-div mb-5">
               <div class="py-5  text-center position-relative">
-                <h2 class="fw-bold maintitle">Our Works</h2>
+                <h1 class="fw-bold maintitle">Our Works</h1>
                 <span class="h1 gallerytitle">Our Works</span>
                     <span class="proptality-border  new"></span>
                 <div class="slick-controls position-absolute end-0 ">
@@ -576,7 +578,7 @@
                 <!-- Why choose us -->
               <div class="container-div py-5 justify-content-center">
                           <div class="text-center pb-3 position-relative">
-                              <h2 class="maintitle">Why Proptality?</h2>
+                              <h1 class="maintitle">Why Proptality?</h1>
                               <span class="h1 proptitle2">Why Proptality?</span>
                               <span class="proptality-border  new"></span>
                           </div>
@@ -701,8 +703,8 @@
                   <div class="container-div container-xl my-5">
                     <div class="pt-3 pb-3">
                     <div class="text-center position-relative">
-                      <h2 class="fw-bold maintitle">Customer Review</h2>
-                      <span class="customtitle">Customer Review</span>
+                      <h1 class="fw-bold maintitle">Customer Review</h1>
+                      <span class="customtitle2">Customer Review</span>
                       <span class="custom-title-border  new"></span>
                   </div>
                 </div>
@@ -978,6 +980,8 @@
                     // @type {string} jQuery Selector
                     dots: true,
                   infinite: true,
+                  autoplay:true,
+                  autoplaySpeed: 1500,
                   speed: 300,
                   slidesToShow: 1,
                   slidesToScroll: 1,
