--- a/InstantWaterHeater.html
+++ b/InstantWaterHeater.html
@@ -185,8 +185,10 @@
   
       <!-- Installation Cost Estimation For Instant Water Heater: -->
             <div class="background">
+              <div class="container-div">
             <div class="text-center py-3">
                 <h2 class="maintitle">Reach out to us to get your no-obligation quotation for Instant water heater installation.</h2>
+                </div>
             </div>
           </div>
             <div class="mt-4  pb-3 font-family">
@@ -589,7 +591,7 @@
                                                       <img src="img/money-back-guarantee-100.png" class="img-fluid float-end"
                                                           alt="">
                                                   </div>
-                                                  <div class="col-3">
+                                                  <div class="col-4">
                                                       <div class="mt-2 mx-4">
                                                           <h5 class="fw-bold">100% Money-Back Guarantee</h5>
                                                           <p class="">We will return your money if you’re not
@@ -605,7 +607,7 @@
                                                       <img src="img/customer-statisfaction.png" class="img-fluid float-end"
                                                           alt="">
                                                   </div>
-                                                  <div class="col-3">
+                                                  <div class="col-4">
                                                       <div class="mt-2 mx-4">
                                                           <h5 class="fw-bold">100% Customer Satisfaction</h5>
                                                           <p class="">We always aim to deliver excellent customer
@@ -621,7 +623,7 @@
                                                   <div class="col-5">
                                                       <img src="img/100-Days-Warranty.png" class="img-fluid float-end" alt="">
                                                   </div>
-                                                  <div class="col-3">
+                                                  <div class="col-4">
                                                       <div class="mt-2 mx-4">
                                                           <h5 class="fw-bold">100 Days Warranty</h5>
                                                           <p class="">We offer a 100 days workmanship warranty
@@ -637,7 +639,7 @@
                                                   <div class="col-5">
                                                       <img src="img/High-Quality-Parts.png" class="img-fluid float-end" alt="">
                                                   </div>
-                                                  <div class="col-3">
+                                                  <div class="col-4">
                                                       <div class="mt-2 mx-4">
                                                           <h5 class="fw-bold">High-Quality Parts</h5>
                                                           <p class="">We use only the best quality materials for
@@ -653,7 +655,7 @@
                                                   <div class="col-5">
                                                       <img src="img/affordable-pricing.png" class="img-fluid float-end" alt="">
                                                   </div>
-                                                  <div class="col-3">
+                                                  <div class="col-4">
                                                       <div class="mt-2 mx-4">
                                                           <h5 class="fw-bold">Affordable Pricing</h5>
                                                           <p class="">We deliver all our residential property
@@ -670,7 +672,7 @@
                                                       <img src="img/Expert-Team-Of-Professionals.png"
                                                           class="img-fluid float-end" alt="">
                                                   </div>
-                                                  <div class="col-3">
+                                                  <div class="col-4">
                                                       <div class="mt-2 mx-4">
                                                           <h5 class="fw-bold">Expert Team Of Professionals</h5>
                                                           <p class="">Our team of professionals efficiently
@@ -686,7 +688,7 @@
                                                   <div class="col-5">
                                                       <img src="img/No-Hidden-Charges.png" class="img-fluid float-end " alt="">
                                                   </div>
-                                                  <div class="col-3">
+                                                  <div class="col-4">
                                                       <div class="mt-2 mx-4">
                                                           <h5 class="fw-bold">No Hidden Charges</h5>
                                                           <p class="">We don’t charge any extra cost for all our
