--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
          <!-- Header -->
        <div class="d-flex justify-content-between py-4 align-items-center">
         <img src="img/Logo 1.png" style="width: 49px;height: 47px;">
+        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <img src="img/menu-icon.svg" alt="" class="img-fluid" />
+    </button> -->
         <ul class="list-unstyled d-flex">
-            <li class="px-4 fs-5 py-3"><a href="#" class="head font-Poppins">Home</a></li>
+            <li class="px-4 py-3 headerfont"><a href="#" class="head font-Poppins">Home</a></li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle px-4 fs-5 py-3 font-Poppins" href="#" id="navbarDropdown"
+              <a class="nav-link dropdown-toggle px-4 py-3 font-Poppins headerfont" href="#" id="navbarDropdown"
                   role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Services
               </a>
@@ -60,15 +65,15 @@
                           Maintenance</a></li>
               </ul>
           </li>
-            <li class="px-4 fs-5 py-3"><a href="#"class="head font-Poppins">Our Works</a></li>
-            <li class="px-4 fs-5 py-3"><a href="#" class="head font-Poppins">Ratings & Reviews</a></li>
-            <li class="px-4 fs-5 py-3"><a href="#" class="head font-Poppins">Blog</a></li>
-            <li><a href="#" type="button" class="btn px-4 py-3 rounded-pill border-0 blue-button fs-5 font-Poppins ms-4">Contact Us</a></li>
+            <li class="px-4 py-3 headerfont"><a href="#"class="head font-Poppins">Our Works</a></li>
+            <li class="px-4 py-3 headerfont"><a href="#" class="head font-Poppins">Ratings & Reviews</a></li>
+            <li class="px-4 py-3 headerfont"><a href="#" class="head font-Poppins">Blog</a></li>
+            <li><a href="#" type="button" class="btn px-4 py-3 rounded-pill border-0 blue-button headerfont font-Poppins ms-4">Contact Us</a></li>
         </ul>
        </div>
            <!-- content -->
            <div class="row">
-           <div class="mt-5 col-12 col-md-6">
+           <div class="mt-5 col-12 col-lg-6">
             <h1 class='fw-bold' style="color: #111C38;">Budget-Friendly Painting Service Company in Singapore</h1>
             <p class="mt-4">Looking for a painting service for your HDB (or) Condominium (or) Landed Residential Property in Singapore?</p>
           <P class="mt-4">Contact us via Call or WhatsApp To Book Your Site Visit For An Exact Quotation.</P>
@@ -89,7 +94,7 @@
            
            </div>
         </div>
-        <div class="col-12 col-md-6 mt-5 slick-carousel-1">
+        <div class="col-12 col-lg-6 mt-5 slick-carousel-1">
           <div class="slide"><img src="img/banner 1 - painting.jpg" class="rounded-3 content-slider-img"></div>
           <div class="slide"><img src="img/banner 2 - painting.jpg" class="rounded-3 content-slider-img"></div>
           <div class="slide"><img src="img/banner 3 - painting.jpg" class="rounded-3 content-slider-img"></div>
@@ -107,8 +112,8 @@
     <span class="  new title-service-border "></span>
 </div>
     <div class="mt-5 d-flex justify-content-center  row">
-      <div class="card shadow rounded-4 pt-4 background mx-4" style="width : 29rem;">
-        <img src="img/Landed Property Painting.jpg" class="card-img-top" alt="..." style="height: 250px;">
+      <div class="card shadow rounded-4 pt-4 background mx-2 mx-lg-2 mx-xl-4 paintingimg">
+        <img src="img/Landed Property Painting.jpg" class="card-img-top serviceimg" alt="..." >
         <div class="card-body text-center">
           <h5 class="card-title fw-bold ">Landed Property Painting</h5>
           <p class="card-text">We offer painting services for landed properties at a reasonable cost.
@@ -116,24 +121,24 @@
             </p>
         </div>
       </div>
-      <div class="card shadow rounded-4 pt-4 background mx-4" style="width : 29rem">
-        <img src="img/Condo Painting.jpg" class="card-img-top" alt="..." style="height: 250px;">
+      <div class="card shadow rounded-4 pt-4 background  mx-2 mx-lg-2 mx-xl-4 paintingimg formargin">
+        <img src="img/Condo Painting.jpg" class="card-img-top serviceimg" alt="..." >
         <div class="card-body text-center">
           <h5 class="card-title fw-bold">Condo Painting</h5>
           <p class="card-text">Our team of experienced painters will paint your condominium to give them a beautiful look at a budget-friendly price. Call our painters to schedule a site visit for an exact quotation.
             </p>
         </div>
       </div>
-      <div class="card shadow rounded-4 pt-4 background mt-4 mx-4" style="width : 29rem">
-        <img src="img/HDB Painting.jpg" class="card-img-top" style="height: 250px;" alt="..." >
+      <div class="card shadow rounded-4 pt-4 background mt-4 mx-2 mx-lg-2 mx-xl-4 paintingimg">
+        <img src="img/HDB Painting.jpg" class="card-img-top serviceimg"  alt="..." >
         <div class="card-body text-center">
           <h5 class="card-title fw-bold">HDB Painting</h5>
           <p class="card-text">We offer HDB painting service at reasonable prices.Give us a call to book your appointment for the HDB painting service today. 
             </p>
         </div>
       </div>
-      <div class="card shadow rounded-4 pt-4 background mt-4 mx-4" style="width : 29rem">
-        <img src="img/Room Painting & Ceiling Painting.jpg" class="card-img-top" alt="..." style="height: 250px;">
+      <div class="card shadow rounded-4 pt-4 background mt-4 mx-2 mx-lg-2 mx-xl-4 paintingimg">
+        <img src="img/Room Painting & Ceiling Painting.jpg" class="card-img-top serviceimg" alt="..." >
         <div class="card-body text-center">
           <h5 class="card-title fw-bold">Room Painting & Ceiling Painting</h5>
           <p class="card-text">
@@ -141,8 +146,8 @@
             </p>
         </div>
       </div>
-      <div class="card shadow rounded-4 pt-4 background mt-4 mx-4" style="width : 29rem">
-        <img src="img/Door Painting  Varnishing.jpg" class="card-img-top" alt="..." style="height: 250px;">
+      <div class="card shadow rounded-4 pt-4 background mt-4 mx-2 mx-lg-2 mx-xl-4 paintingimg">
+        <img src="img/Door Painting  Varnishing.jpg" class="card-img-top serviceimg" alt="..." >
         <div class="card-body text-center">
           <h5 class="card-title fw-bold">Door Painting /  Wardrobe Varnishing</h5>
           <p class="card-text">
@@ -150,8 +155,8 @@
             </p>
         </div>
       </div>
-      <div class="card shadow rounded-4 pt-4 background mt-4 mx-4" style="width : 29rem">
-        <img src="img/WallPaper Removal.jpeg" class="card-img-top" alt="..." style="height: 250px;">
+      <div class="card shadow rounded-4 pt-4 background mt-4 mx-2 mx-lg-2 mx-xl-4 paintingimg">
+        <img src="img/WallPaper Removal.jpeg" class="card-img-top serviceimg" alt="..." >
         <div class="card-body text-center">
           <h5 class="card-title fw-bold">WallPaper Removal</h5>
           <p class="card-text">
@@ -188,7 +193,7 @@
                 <h4>Below are the factors that determine the painting cost estimation for your residential properties,
                 </h4>
             </div>
-            <div class="d-flex justify-content-between py-5">
+            <div class="d-flex justify-content-lg-between justify-content-evenly py-5 flex-wrap">
               <div class="card shadow rounded-4 py-3 paintcard">
                 <div class="card-body">
                   <h5 class="card-title fw-bold">Height of the building
@@ -206,14 +211,14 @@
                 </div>
               </div>
              
-              <div class="card shadow rounded-4 py-3 paintcard">
+              <div class="card shadow rounded-4 py-3 paintcard mt-4 mt-lg-0">
                 <div class="card-body">
                   <h5 class="card-title fw-bold">Complexity</h5>
                   <p class="card-text">When you opt to add more colours, more effort is required to set up & complete the painting work.
                 </p>
                 </div>
               </div>
-              <div class="card shadow rounded-4 py-3 paintcard">
+              <div class="card shadow rounded-4 py-3 paintcard mt-4 mt-lg-0">
                 <div class="card-body">
                   <h5 class="card-title fw-bold">Type of Paint used</h5>
                   <p class="card-text">Each paint type has a particular purpose and will give a different look (after finishing). Example Nippons' Matex paint is cheap/litre compared to Nippons' "All in one" paint/litre.
@@ -470,7 +475,7 @@
                                                         <img src="img/money-back-guarantee-100.png" class="img-fluid float-end"
                                                             alt="">
                                                     </div>
-                                                    <div class="col-3">
+                                                    <div class="col-6 col-lg-4">
                                                         <div class="mt-2 mx-4">
                                                             <h5 class="fw-bold">100% Money-Back Guarantee</h5>
                                                             <p class="">We will return your money if you’re not
@@ -486,7 +491,7 @@
                                                         <img src="img/customer-statisfaction.png" class="img-fluid float-end"
                                                             alt="">
                                                     </div>
-                                                    <div class="col-3">
+                                                    <div class="col-6 col-lg-4">
                                                         <div class="mt-2 mx-4">
                                                             <h5 class="fw-bold">100% Customer Satisfaction</h5>
                                                             <p class="">We always aim to deliver excellent customer
@@ -502,7 +507,7 @@
                                                     <div class="col-5">
                                                         <img src="img/100-Days-Warranty.png" class="img-fluid float-end" alt="">
                                                     </div>
-                                                    <div class="col-3">
+                                                    <div class="col-6 col-lg-4">
                                                         <div class="mt-2 mx-4">
                                                             <h5 class="fw-bold">100 Days Warranty</h5>
                                                             <p class="">We offer a 100 days workmanship warranty
@@ -518,7 +523,7 @@
                                                     <div class="col-5">
                                                         <img src="img/High-Quality-Parts.png" class="img-fluid float-end" alt="">
                                                     </div>
-                                                    <div class="col-3">
+                                                    <div class="col-6 col-lg-4">
                                                         <div class="mt-2 mx-4">
                                                             <h5 class="fw-bold">High-Quality Parts</h5>
                                                             <p class="">We use only the best quality materials for
@@ -534,7 +539,7 @@
                                                     <div class="col-5">
                                                         <img src="img/affordable-pricing.png" class="img-fluid float-end" alt="">
                                                     </div>
-                                                    <div class="col-3">
+                                                    <div class="col-6 col-lg-4">
                                                         <div class="mt-2 mx-4">
                                                             <h5 class="fw-bold">Affordable Pricing</h5>
                                                             <p class="">We deliver all our residential property
@@ -551,7 +556,7 @@
                                                         <img src="img/Expert-Team-Of-Professionals.png"
                                                             class="img-fluid float-end" alt="">
                                                     </div>
-                                                    <div class="col-3">
+                                                    <div class="col-6 col-lg-4">
                                                         <div class="mt-2 mx-4">
                                                             <h5 class="fw-bold">Expert Team Of Professionals</h5>
                                                             <p class="">Our team of professionals efficiently
@@ -567,7 +572,7 @@
                                                     <div class="col-5">
                                                         <img src="img/No-Hidden-Charges.png" class="img-fluid float-end " alt="">
                                                     </div>
-                                                    <div class="col-3">
+                                                    <div class="col-6 col-lg-4">
                                                         <div class="mt-2 mx-4">
                                                             <h5 class="fw-bold">No Hidden Charges</h5>
                                                             <p class="">We don’t charge any extra cost for all our
@@ -649,11 +654,11 @@
                 <div class="col-12 requestcall">
                 <h2 class="request text-center">Request a call back</h2>
                 <span class="new new-border"></span>
-                <ul class="mt-5 d-flex justify-content-center list-unstyled">
-                  <li class="mx-3"><input class="forminput" placeholder="Name"></li>
-                  <li class="mx-3"><input class="forminput" placeholder="Email Address"></li>
-                  <li class="mx-3"><input class="forminput" placeholder="Phone"></li>
-                  <li class="mx-3"><button class="btn-submit">Submit</button></li>
+                <ul class="mt-5 d-flex justify-content-center list-unstyled flex-wrap">
+                  <li class="mx-lg-3 mx-2"><input class="forminput" placeholder="Name"></li>
+                  <li class="mx-lg-3 mx-2"><input class="forminput" placeholder="Email Address"></li>
+                  <li class="mx-lg-3 mx-2"><input class="forminput" placeholder="Phone"></li>
+                  <li class="mx-lg-3 mx-2"><button class="btn-submit formargin">Submit</button></li>
                 </ul>
               </div>
               </div>
@@ -662,9 +667,9 @@
                   <footer>
                     <div class="container-div container-div">
                         <div class="row">
-                            <div class="col-lg-3 col-md-4 col-12">
-                                <div class="footer-left">
-                                    <span><img src="/img/Logo 1.png" alt="" /></span>
+                            <div class="col-lg-3 col-7 col-md-11 mx-auto">
+                                <div class="footer-left text-center text-lg-start">
+                                    <span><img src="/img/Logo 1.png" alt=""/></span>
                                     <p class="font-Poppins">For any property repair or <br> maintenance, Simply call us.</p>
                                     <ul class="list-unstyled">
                                         <li class="font-Poppins footer-Address">Proptality Ptd Ltd </li> 
@@ -672,7 +677,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-4 col-6">
+                            <div class="col-lg-3 col-6 col-md-4 mt-5 mt-lg-0">
                                 <div class="footer-link">
                                     <h4>Useful Links</h4>
                                     <ul class="list-unstyled">
@@ -687,7 +692,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-4 col-6">
+                            <div class="col-lg-3 col-6 col-md-4 mt-5 mt-lg-0">
                                 <div class="footer-link footer-link2">
                                     <h4>Social media</h4>
                                     <ul class="list-unstyled">
@@ -700,7 +705,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
+                            <div class="col-lg-3 col-6 col-md-4 mx-auto mt-5 mt-lg-0">
                                 <div class="footer-number">
                                     <form method="post" action="subscribeMail.php">
                                         <input type="text" class="form-control" placeholder="Subscribe" name="subscribe"/>
